--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Pparallel-test -Dmaven.fork.count=2 -pl processing
+      script: echo "MAVEN_OPTS='-Xmx1024m'" > ~/.mavenrc && mvn test -B -pl processing
 
       # processing module tests with SQL Compatibility enabled
     - sudo: false
@@ -40,7 +40,7 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Pparallel-test -Dmaven.fork.count=2 -Ddruid.generic.useDefaultValueForNull=false -pl processing
+      script: echo "MAVEN_OPTS='-Xmx1024m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
 
       # server module test
     - sudo: false
@@ -71,7 +71,7 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Pparallel-test -Dmaven.fork.count=2 -pl '!processing,!server'
+      script: echo "MAVEN_OPTS='-Xmx1024m'" > ~/.mavenrc && mvn test -B -pl '!processing,!server'
 
       # other modules test with SQL Compatibility enabled
     - sudo: false
@@ -81,7 +81,7 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Pparallel-test -Dmaven.fork.count=2 -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
+      script: echo "MAVEN_OPTS='-Xmx1024m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
 
       # run integration tests
     - sudo: required
