--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,10 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx2048m'" > ~/.mavenrc && mvn test -B -pl processing
+      script:
+        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -pl processing
+        - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' || exit 0"
+        - free -m
 
       # processing module tests with SQL Compatibility enabled
     - sudo: false
@@ -40,7 +43,10 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx2048m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
+      script:
+        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
+        - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' || exit 0"
+        - free -m
 
       # server module test
     - sudo: false
@@ -71,7 +77,10 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx1024m'" > ~/.mavenrc && mvn test -B -pl '!processing,!server'
+      script:
+        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -pl '!processing,!server'
+        - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' || exit 0"
+        - free -m
 
       # other modules test with SQL Compatibility enabled
     - sudo: false
@@ -81,7 +90,10 @@ matrix:
       install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
       before_script:
         - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx1024m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
+      script:
+        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
+        - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' || exit 0"
+        - free -m
 
       # run integration tests
     - sudo: required
