--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,17 @@ matrix:
         - NAME="strict compilation"
       install: true
       # Strict compilation requires more than 2 GB
-      script: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn clean -Pstrict -pl '!benchmarks' compile test-compile -B --fail-at-end
+      script: MAVEN_OPTS='-Xmx3000m' mvn clean -Pstrict -pl '!benchmarks' compile test-compile -B --fail-at-end
 
       # processing module test
     - sudo: false
       env:
         - NAME="processing module test"
-      install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
+      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script:
-        - unset _JAVA_OPTIONS
+        - _JAVA_OPTIONS="-Xmx512m -XX:MaxDirectMemorySize=1500m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
       script:
-        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -pl processing
+        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl processing
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -40,11 +40,11 @@ matrix:
     - sudo: false
       env:
         - NAME="processing module test with SQL Compatibility"
-      install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
+      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script:
-        - unset _JAVA_OPTIONS
+        - _JAVA_OPTIONS="-Xmx512m -XX:MaxDirectMemorySize=1500m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
       script:
-        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
+        - MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -52,19 +52,19 @@ matrix:
     - sudo: false
       env:
         - NAME="server module test"
-      install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
+      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script:
-        - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -pl server
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
+      script: MAVEN_OPTS='-Xmx512m' mvn test -B -pl server
 
       # server module test with SQL Compatibility enabled
     - sudo: false
       env:
         - NAME="server module test with SQL Compatibility enabled"
-      install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
+      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script:
-        - unset _JAVA_OPTIONS
-      script: echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -pl server -Ddruid.generic.useDefaultValueForNull=false
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
+      script: MAVEN_OPTS='-Xmx512m' mvn test -B -pl server -Ddruid.generic.useDefaultValueForNull=false
 
 
       # other modules test
@@ -72,11 +72,11 @@ matrix:
       env:
         - NAME="other modules test"
         - AWS_REGION=us-east-1 # set a aws region for unit tests
-      install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
+      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script:
-        - unset _JAVA_OPTIONS
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
       script:
-        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -pl '!processing,!server'
+        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl '!processing,!server'
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -85,11 +85,11 @@ matrix:
       env:
         - NAME="other modules test with SQL Compatibility"
         - AWS_REGION=us-east-1 # set a aws region for unit tests
-      install: echo "MAVEN_OPTS='-Xmx3000m'" > ~/.mavenrc && mvn install -q -ff -DskipTests -B
+      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script:
-        - unset _JAVA_OPTIONS
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
       script:
-        - echo "MAVEN_OPTS='-Xmx512m'" > ~/.mavenrc && mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
+        - MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
