--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,9 @@ matrix:
       env:
         - NAME="processing module test"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script:
-        - _JAVA_OPTIONS="-Xmx512m -XX:MaxDirectMemorySize=1500m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
+      before_script: unset _JAVA_OPTIONS
       script:
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl processing
+        - _JAVA_OPTIONS="-Xmx512m -XX:MaxDirectMemorySize=1500m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double" MAVEN_OPTS='-Xmx512m' mvn test -B -pl processing
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -41,10 +40,9 @@ matrix:
       env:
         - NAME="processing module test with SQL Compatibility"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script:
-        - _JAVA_OPTIONS="-Xmx512m -XX:MaxDirectMemorySize=1500m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
+      before_script: unset _JAVA_OPTIONS
       script:
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
+        - _JAVA_OPTIONS="-Xmx512m -XX:MaxDirectMemorySize=1500m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double" MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl processing
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -53,18 +51,18 @@ matrix:
       env:
         - NAME="server module test"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script:
-        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
-      script: MAVEN_OPTS='-Xmx512m' mvn test -B -pl server
+      before_script: unset _JAVA_OPTIONS
+      script:
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double" MAVEN_OPTS='-Xmx512m' mvn test -B -pl server
 
       # server module test with SQL Compatibility enabled
     - sudo: false
       env:
         - NAME="server module test with SQL Compatibility enabled"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script:
-        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
-      script: MAVEN_OPTS='-Xmx512m' mvn test -B -pl server -Ddruid.generic.useDefaultValueForNull=false
+      before_script: unset _JAVA_OPTIONS
+      script:
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double" MAVEN_OPTS='-Xmx512m' mvn test -B -pl server -Ddruid.generic.useDefaultValueForNull=false
 
 
       # other modules test
@@ -73,10 +71,9 @@ matrix:
         - NAME="other modules test"
         - AWS_REGION=us-east-1 # set a aws region for unit tests
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script:
-        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
+      before_script: unset _JAVA_OPTIONS
       script:
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl '!processing,!server'
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double" MAVEN_OPTS='-Xmx512m' mvn test -B -pl '!processing,!server'
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -86,10 +83,9 @@ matrix:
         - NAME="other modules test with SQL Compatibility"
         - AWS_REGION=us-east-1 # set a aws region for unit tests
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script:
-        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double"
+      before_script: unset _JAVA_OPTIONS
       script:
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
+        - _JAVA_OPTIONS="-Xmx1024m -XX:MaxDirectMemorySize=512m -Duser.language=en -Duser.GroupByQueryRunnerTest.javacountry=US -Dfile.encoding=UTF-8 -Duser.timezone=UTC -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Ddruid.indexing.doubleStorage=double" MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
