--- a/pom.xml
+++ b/pom.xml
@@ -1014,6 +1014,19 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.19.1</version>
                     <configuration>
+                        <!-- locale settings must be set on the command line before startup -->
+                        <!-- set default options -->
+                        <argLine>
+                            -Xmx1500m
+                            -XX:MaxDirectMemorySize=512m
+                            -Duser.language=en
+                            -Duser.GroupByQueryRunnerTest.javacountry=US
+                            -Dfile.encoding=UTF-8
+                            -Duser.timezone=UTC
+                            -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+                            <!--@TODO After fixing https://github.com/druid-io/druid/issues/4964 remove this parameter-->
+                            -Ddruid.indexing.doubleStorage=double
+                        </argLine>
                         <!-- our tests are very verbose, let's keep the volume down -->
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     </configuration>
