--- a/processing/pom.xml
+++ b/processing/pom.xml
@@ -196,6 +196,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <!-- locale settings must be set on the command line before startup -->
+                    <!-- set default options -->
+                    <argLine>
+                        -Xmx512m
+                        -XX:MaxDirectMemorySize=1500m
+                        -Duser.language=en
+                        -Duser.GroupByQueryRunnerTest.javacountry=US
+                        -Dfile.encoding=UTF-8
+                        -Duser.timezone=UTC
+                        -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+                        <!--@TODO After fixing https://github.com/druid-io/druid/issues/4964 remove this parameter-->
+                        -Ddruid.indexing.doubleStorage=double
+                    </argLine>
+                    <!-- our tests are very verbose, let's keep the volume down -->
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <excludedGroups>io.druid.collections.test.annotation.Benchmark</excludedGroups>
                 </configuration>
             </plugin>
