--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,14 @@ cache:
 matrix:
   include:
       # strict compilation
-    - sudo: false
-      env:
+    - env:
         - NAME="strict compilation"
       install: true
       # Strict compilation requires more than 2 GB
       script: MAVEN_OPTS='-Xmx3000m' mvn clean -Pstrict -pl '!benchmarks' compile test-compile -B --fail-at-end
 
       # processing module test
-    - sudo: false
-      env:
+    - env:
         - NAME="processing module test"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script: unset _JAVA_OPTIONS
@@ -37,8 +35,7 @@ matrix:
         - free -m
 
       # processing module tests with SQL Compatibility enabled
-    - sudo: false
-      env:
+    - env:
         - NAME="processing module test with SQL Compatibility"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script: unset _JAVA_OPTIONS
@@ -48,8 +45,7 @@ matrix:
         - free -m
 
       # server module test
-    - sudo: false
-      env:
+    - env:
         - NAME="server module test"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script: unset _JAVA_OPTIONS
@@ -57,8 +53,7 @@ matrix:
         - MAVEN_OPTS='-Xmx512m' mvn test -B -pl server
 
       # server module test with SQL Compatibility enabled
-    - sudo: false
-      env:
+    - env:
         - NAME="server module test with SQL Compatibility enabled"
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
       before_script: unset _JAVA_OPTIONS
@@ -67,8 +62,7 @@ matrix:
 
 
       # other modules test
-    - sudo: false
-      env:
+    - env:
         - NAME="other modules test"
         - AWS_REGION=us-east-1 # set a aws region for unit tests
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
@@ -79,8 +73,7 @@ matrix:
         - free -m
 
       # other modules test with SQL Compatibility enabled
-    - sudo: false
-      env:
+    - env:
         - NAME="other modules test with SQL Compatibility"
         - AWS_REGION=us-east-1 # set a aws region for unit tests
       install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
@@ -91,8 +84,7 @@ matrix:
         - free -m
 
       # run integration tests
-    - sudo: required
-      services:
+    - services:
         - docker
       env:
         - NAME="integration test"
