--- a/.travis.yml
+++ b/.travis.yml
@@ -45,25 +45,6 @@ matrix:
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
-      # server module test
-    - env:
-        - NAME="server module test"
-      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script: unset _JAVA_OPTIONS
-      script:
-        # Set MAVEN_OPTS for Surefire launcher
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl server
-
-      # server module test with SQL Compatibility enabled
-    - env:
-        - NAME="server module test with SQL Compatibility enabled"
-      install: MAVEN_OPTS='-Xmx3000m' mvn install -q -ff -DskipTests -B
-      before_script: unset _JAVA_OPTIONS
-      script:
-        # Set MAVEN_OPTS for Surefire launcher
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl server -Ddruid.generic.useDefaultValueForNull=false
-
-
       # other modules test
     - env:
         - NAME="other modules test"
@@ -72,7 +53,7 @@ matrix:
       before_script: unset _JAVA_OPTIONS
       script:
         # Set MAVEN_OPTS for Surefire launcher
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl '!processing,!server'
+        - MAVEN_OPTS='-Xmx512m' mvn test -B -pl '!processing'
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
@@ -84,7 +65,7 @@ matrix:
       before_script: unset _JAVA_OPTIONS
       script:
         # Set MAVEN_OPTS for Surefire launcher
-        - MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing,!server'
+        - MAVEN_OPTS='-Xmx512m' mvn test -B -Ddruid.generic.useDefaultValueForNull=false -pl '!processing'
         - sh -c "dmesg | egrep -i '(oom|out of memory|kill process|killed).*' -C 1 || exit 0"
         - free -m
 
