Squashed commit of the following:
commit a21a3ceab8f23d4791f7ed188cd9d34f05858b30
Author: eyurman14 <eyurman14@verizonmedia.com>
Date:   Thu Jan 31 00:15:16 2019 -0800

    Fixing rat errors; Teamcity errors.

commit 95b803a4f06ae5dfbe3c2b6461ee12cb885443e7
Author: eyurman14 <eyurman14@verizonmedia.com>
Date:   Wed Jan 30 16:58:52 2019 -0800

    Checkstyle fixes.

commit b7317805679bb7be644964131ad5a6bfd89bd1ce
Author: eyurman14 <eyurman14@verizonmedia.com>
Date:   Wed Jan 30 15:46:20 2019 -0800

    Small checkstyle fix.

commit 6635751805e4ac6208d5bcd18d13f751d7d6f3f6
Author: eyurman14 <eyurman14@verizonmedia.com>
Date:   Wed Jan 30 14:06:09 2019 -0800

    Refresh code with latest master changes:

    * Remove NullDimensionSelector.
    * Apply changes of RequestLogger.
    * Apply changes of TimelineServerView.

commit 7b71a261b5ef7d16d026cb94e5abd7283bf76345
Author: eyurman14 <eyurman14@verizonmedia.com>
Date:   Wed Jan 30 10:46:32 2019 -0800

    Update styling and headers for complience.

commit 7bbfc6d763e26b44edaf20483d622e1f99678753
Merge: 63cf6eecbe c23c5ef4ef
Author: Eyal Yurman <eyal.yurman@gmail.com>
Date:   Tue Jan 29 16:59:58 2019 -0800

    Merge branch 'master' into moving-average-query

commit 63cf6eecbe39ed4435699a4be544f062e523b175
Merge: 1d9884792c a2a1a1c2c9
Author: eyurman14 <eyurman14@verizonmedia.com>
Date:   Tue Jan 29 16:50:06 2019 -0800

    Merge branch 'master' into moving-average-query

commit 1d9884792cb162433fc2d3b9c6728e132d9b5853
Author: eyurman14 <eyurman14@oath.com>
Date:   Wed Oct 10 13:29:54 2018 -0700

    Explicitly remove support for druid.generic.useDefaultValueForNull configuration parameter.

commit 136eb939effa0fdc1c6a13a4d4ad92c4cee68a85
Author: eyurman14 <eyurman14@oath.com>
Date:   Tue Oct 9 12:29:15 2018 -0700

    See if explicit types will invoke the correct comparison function.

commit ef7e0e6012b40ee0b955f077d67f080f1dab611a
Author: eyurman14 <eyurman14@oath.com>
Date:   Mon Oct 8 23:16:21 2018 -0700

    Fix f

--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
         <module>extensions-contrib/materialized-view-maintenance</module>
         <module>extensions-contrib/materialized-view-selection</module>
         <module>extensions-contrib/momentsketch</module>
+        <module>extensions-contrib/moving-average-query</module>
         <!-- distribution packaging -->
         <module>distribution</module>
     </modules>
