--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -310,6 +310,8 @@
                                         <argument>org.apache.druid.extensions.contrib:druid-time-min-max</argument>
                                         <argument>-c</argument>
                                         <argument>org.apache.druid.extensions.contrib:druid-virtual-columns</argument>
+                                        <argument>-c</argument>
+                                        <argument>org.apache.druid.extensions.contrib:druid-moving-average-query</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
