--- a/pom.xml
+++ b/pom.xml
@@ -1212,7 +1212,7 @@
                         <!-- locale settings must be set on the command line before startup -->
                         <!-- set default options -->
                         <argLine>
-                            -Xmx1500m
+                            -Xmx4g
                             -XX:MaxDirectMemorySize=512m
                             -Duser.language=en
                             -Duser.GroupByQueryRunnerTest.javacountry=US
