Benchmark with PolyglotJsBufferAggregator
Benchmark                                            (rowsPerSegment)  Mode  Cnt    Score   Error  Units
ExpressionAggregationBenchmark.queryUsingExpression           1000000  avgt   30   71.048 ± 0.108  ms/op
ExpressionAggregationBenchmark.queryUsingJavaScript           1000000  avgt   30   53.720 ± 0.087  ms/op
ExpressionAggregationBenchmark.queryUsingNative               1000000  avgt   30   18.291 ± 0.063  ms/op
ExpressionAggregationBenchmark.queryUsingPolyglotJs           1000000  avgt   30  132.724 ± 0.464  ms/op

--- a/pom.xml
+++ b/pom.xml
@@ -1316,135 +1316,135 @@
                     <excludeFilterFile>codestyle/spotbugs-exclude.xml</excludeFilterFile>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.8</version>
-                <configuration>
-                    <printFailingErrors>true</printFailingErrors>
-                    <rulesets>
-                        <ruleset>/rulesets/java/imports.xml</ruleset>
-                    </rulesets>
-                    <excludeRoots>
-                        <excludeRoot>target/generated-sources/</excludeRoot>
-                    </excludeRoots>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>de.thetaphi</groupId>
-                <artifactId>forbiddenapis</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <failOnUnresolvableSignatures>false</failOnUnresolvableSignatures>
-                    <bundledSignatures>
-                        <!--
-                          This will automatically choose the right
-                          signatures based on 'maven.compiler.target':
-                        -->
-                        <bundledSignature>jdk-unsafe</bundledSignature>
-                    </bundledSignatures>
-                    <signaturesFiles>
-                        <signaturesFile>${project.parent.basedir}/codestyle/joda-time-forbidden-apis.txt</signaturesFile>
-                        <signaturesFile>${project.parent.basedir}/codestyle/druid-forbidden-apis.txt</signaturesFile>
-                    </signaturesFiles>
-                    <excludes>
-                      <exclude>**/SomeAvroDatum.class</exclude>
-                    </excludes>
-                    <suppressAnnotations>
-                        <annotation>**.SuppressForbidden</annotation>
-                    </suppressAnnotations>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <bundledSignatures>
-                                <!-- Check jdk-system-out only for production code, but not in test code -->
-                                <bundledSignature>jdk-unsafe</bundledSignature>
-                                <bundledSignature>jdk-system-out</bundledSignature>
-                            </bundledSignatures>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCheck</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.17</version>
-                <executions>
-                    <execution>
-                        <id>check-java-api</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <signature>
-                                <groupId>org.codehaus.mojo.signature
-                                </groupId>
-                                <artifactId>java18</artifactId>
-                                <version>1.0</version>
-                            </signature>
-                            <ignores>
-                                <!-- Some of our code uses sun.* classes directly, which are not part of
-                                     the JDK signature (although they are there anyway). -->
-                                <ignore>sun.nio.ch.DirectBuffer</ignore>
-                                <ignore>sun.misc.Cleaner</ignore>
-                                <ignore>sun.misc.Unsafe</ignore>
-                                <!-- ignore java reflection polymorphic api signatures -->
-                                <ignore>java.lang.invoke.MethodHandle</ignore>
-                            </ignores>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.4.1</version>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireJavaVersion>
-                                    <version>1.8.0</version>
-                                </requireJavaVersion>
-                                <bannedDependencies>
-                                    <excludes>
-                                        <!--LGPL licenced library-->
-                                        <exclude>com.google.code.findbugs:annotations</exclude>
-                                    </excludes>
-                                </bannedDependencies>
-                            </rules>
-                            <fail>true</fail>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-pmd-plugin</artifactId>-->
+<!--                <version>3.8</version>-->
+<!--                <configuration>-->
+<!--                    <printFailingErrors>true</printFailingErrors>-->
+<!--                    <rulesets>-->
+<!--                        <ruleset>/rulesets/java/imports.xml</ruleset>-->
+<!--                    </rulesets>-->
+<!--                    <excludeRoots>-->
+<!--                        <excludeRoot>target/generated-sources/</excludeRoot>-->
+<!--                    </excludeRoots>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>validate</id>-->
+<!--                        <phase>validate</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>de.thetaphi</groupId>-->
+<!--                <artifactId>forbiddenapis</artifactId>-->
+<!--                <version>2.6</version>-->
+<!--                <configuration>-->
+<!--                    <failOnUnresolvableSignatures>false</failOnUnresolvableSignatures>-->
+<!--                    <bundledSignatures>-->
+<!--                        &lt;!&ndash;-->
+<!--                          This will automatically choose the right-->
+<!--                          signatures based on 'maven.compiler.target':-->
+<!--                        &ndash;&gt;-->
+<!--                        <bundledSignature>jdk-unsafe</bundledSignature>-->
+<!--                    </bundledSignatures>-->
+<!--                    <signaturesFiles>-->
+<!--                        <signaturesFile>${project.parent.basedir}/codestyle/joda-time-forbidden-apis.txt</signaturesFile>-->
+<!--                        <signaturesFile>${project.parent.basedir}/codestyle/druid-forbidden-apis.txt</signaturesFile>-->
+<!--                    </signaturesFiles>-->
+<!--                    <excludes>-->
+<!--                      <exclude>**/SomeAvroDatum.class</exclude>-->
+<!--                    </excludes>-->
+<!--                    <suppressAnnotations>-->
+<!--                        <annotation>**.SuppressForbidden</annotation>-->
+<!--                    </suppressAnnotations>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>compile</id>-->
+<!--                        <phase>compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <bundledSignatures>-->
+<!--                                &lt;!&ndash; Check jdk-system-out only for production code, but not in test code &ndash;&gt;-->
+<!--                                <bundledSignature>jdk-unsafe</bundledSignature>-->
+<!--                                <bundledSignature>jdk-system-out</bundledSignature>-->
+<!--                            </bundledSignatures>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>testCompile</id>-->
+<!--                        <phase>test-compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>testCheck</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>animal-sniffer-maven-plugin</artifactId>-->
+<!--                <version>1.17</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>check-java-api</id>-->
+<!--                        <phase>test</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <signature>-->
+<!--                                <groupId>org.codehaus.mojo.signature-->
+<!--                                </groupId>-->
+<!--                                <artifactId>java18</artifactId>-->
+<!--                                <version>1.0</version>-->
+<!--                            </signature>-->
+<!--                            <ignores>-->
+<!--                                &lt;!&ndash; Some of our code uses sun.* classes directly, which are not part of-->
+<!--                                     the JDK signature (although they are there anyway). &ndash;&gt;-->
+<!--                                <ignore>sun.nio.ch.DirectBuffer</ignore>-->
+<!--                                <ignore>sun.misc.Cleaner</ignore>-->
+<!--                                <ignore>sun.misc.Unsafe</ignore>-->
+<!--                                &lt;!&ndash; ignore java reflection polymorphic api signatures &ndash;&gt;-->
+<!--                                <ignore>java.lang.invoke.MethodHandle</ignore>-->
+<!--                            </ignores>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-enforcer-plugin</artifactId>-->
+<!--                <version>1.4.1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>default-cli</id>-->
+<!--                        <goals>-->
+<!--                            <goal>enforce</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <rules>-->
+<!--                                <requireJavaVersion>-->
+<!--                                    <version>1.8.0</version>-->
+<!--                                </requireJavaVersion>-->
+<!--                                <bannedDependencies>-->
+<!--                                    <excludes>-->
+<!--                                        &lt;!&ndash;LGPL licenced library&ndash;&gt;-->
+<!--                                        <exclude>com.google.code.findbugs:annotations</exclude>-->
+<!--                                    </excludes>-->
+<!--                                </bannedDependencies>-->
+<!--                            </rules>-->
+<!--                            <fail>true</fail>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
