Build iap branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,14 @@ stages:
   - name: cron
     if: type = cron
 
+branches:
+  only:
+  - master
+  - nightly
+  - nightly-test
+  - latest
+  - /.*-iap.*$/
+
 jobs:
   include:
     - name: "animal sniffer checks"
